--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -39,6 +39,7 @@ textarea {
 
 // Buttons
 .btn {
+  margin: 0 auto;
   display: block;
   border: 1px solid $dark-color;
   border-radius: 5px;
