--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -39,10 +39,15 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 2rem 1.5rem;
 
     .profile-heading {
       font-size: 2rem;
     }
+  }
+
+  .btn {
+    align-self: end;
   }
 
   .email-modal {
